2011-07-26    <simleo@neuron.crs4.it>

	* tools/check_rs.py (DbSnpReader): header parser made more robust.

2011-07-25    <simleo@neuron.crs4.it>

	* tools/check_rs.py: changed to output dbSNP sequences.

2011-07-22    <zag@manzanillo>

	* docs/index.rst: Started documentation restructuring. Mostly
	moving things around.

2011-07-18    <zag@manzanillo>

	* models/collection.ome.xml: Added ContainerStatus as an enum.
	added it as a required parameter in Container. The idea is to be
	able to track titerplate preparation phases.

	* bl/vl/app/importer/marker_alignment.py: Back to use marker_vid
	to identify markers. It is the only solution with a reasonable hope
	to scale.

2011-07-16    <simleo@neuron.crs4.it>

	* tools/check_rs.py: added an option for specifying a custom cut
	size; fixed auto-calculation of the cut size (we want min flank
	size from the annotation, not max); added checks for over-short
	flanks.

2011-07-06    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.add_ehr_record): Added
	interface to eav.py

	* tests/bl/vl/kb/test_eav.py: Added.

	* bl/vl/kb/drivers/omero/eav.py: Added.

2011-07-06    <simleo@neuron.crs4.it>

	* bl/vl/app/kb_query/markers.py (Markers): fixed dump_mapping.

	* bl/vl/app/importer/marker_definition.py
	(Recorder.save_snp_marker_definitions.ns): fixed a bug where
	context was also saved as 'release'.

2011-06-04    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/utils.py: created.

2011-05-26    <zag@manzanillo>

	* models/sample/dna_sample.ome.xml: Removed all the nanodrop
	details, they should be provided as a DataResult produced by a
	NanoDrop device.

2011-05-24    <zag@manzanillo>

	* tests/bl/vl/individual/kb/test_ikb.py
	(TestIKB.create_individual_sample_chain): disabled since it was
	using get_root.

	* tests/bl/vl/sample/kb/test_skb_extended.py
	(TestSKBExtended.check_object): disabled. It will not work, since
	we have dropped proxy_indexed.

	* bl/vl/sample/kb/drivers/omero/sample.py (DataSample): patched to